[gd_scene load_steps=15 format=2]

[ext_resource path="res://Prototipos/Scene/Tank/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Prototipos/Scene/Tank/Tank.gd" type="Script" id=2]
[ext_resource path="res://Prototipos/Assets/Tank/spritesheet.png" type="Texture" id=3]
[ext_resource path="res://Prototipos/Scene/Tank/TankCollision.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=2]
resource_name = "Down"
tracks/0/type = "value"
tracks/0/path = NodePath("spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BulletPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Left"
tracks/0/type = "value"
tracks/0/path = NodePath("spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BulletPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -44, -32 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Right"
tracks/0/type = "value"
tracks/0/path = NodePath("spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BulletPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 43, -32 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Up"
tracks/0/type = "value"
tracks/0/path = NodePath("spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BulletPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -73 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Up"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Left"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Down"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Right"

[sub_resource type="AnimationNodeBlendSpace2D" id=10]
blend_point_0/node = SubResource( 6 )
blend_point_0/pos = Vector2( 0, -1 )
blend_point_1/node = SubResource( 7 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 8 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 9 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[node name="Tank" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )
bullet = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -32 )
shape = SubResource( 1 )

[node name="Body" type="Node2D" parent="."]
position = Vector2( 0, -32 )

[node name="CollisionDetector" type="Node2D" parent="Body"]
script = ExtResource( 4 )

[node name="RayCastRight" type="RayCast2D" parent="Body/CollisionDetector"]
position = Vector2( 32, 28 )
enabled = true
cast_to = Vector2( 40, 0 )

[node name="RayCastMiddle" type="RayCast2D" parent="Body/CollisionDetector"]
position = Vector2( 32, 0 )
enabled = true
cast_to = Vector2( 40, 0 )

[node name="RayCastLeft" type="RayCast2D" parent="Body/CollisionDetector"]
position = Vector2( 32, -28 )
enabled = true
cast_to = Vector2( 40, 0 )

[node name="BulletPosition" type="Position2D" parent="."]
position = Vector2( 43, -32 )

[node name="Canon" type="Position2D" parent="BulletPosition"]
position = Vector2( 0, -18 )

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="spritesheet" type="Sprite" parent="."]
position = Vector2( 0, -45 )
texture = ExtResource( 3 )
hframes = 4
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Down = SubResource( 2 )
anims/Left = SubResource( 3 )
anims/Right = SubResource( 4 )
anims/Up = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="AnimationPlayer"]
tree_root = SubResource( 10 )
anim_player = NodePath("..")
active = true
parameters/blend_position = Vector2( 0.3, -0.12931 )

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
